--- a/sctnet/res/values/strings.xml
+++ b/sctnet/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="app_name">sctnet</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">四川人才网app!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
 
