--- a/sctnet/res/values/strings.xml
+++ b/sctnet/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
 
+    <!--title -->
+    <string name="titlebar_img_btn_left_desc">标题栏左边按钮</string>
+    <string name="titlebar_img_btn_right_desc">标题栏右边按钮</string>
+    
+    <string name="loading">加载中...</string>
 </resources>
