--- a/sctnet/res/values/strings.xml
+++ b/sctnet/res/values/strings.xml
@@ -3,11 +3,14 @@
     <string name="app_name">sctnet</string>
     <string name="hello_world">四川人才网app!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
-
+    <string name="title_activity_main">sctnet</string>
+     
     <!--title -->
     <string name="titlebar_img_btn_left_desc">标题栏左边按钮</string>
     <string name="titlebar_img_btn_right_desc">标题栏右边按钮</string>
-    
+    <!--     deloge -->
     <string name="loading">加载中...</string>
+<!--     主页 -->
+    <string name="homeActivityTitle">四川人才网</string>
+    <string name="homeactivityhint">请输入关键字</string>
 </resources>
