--- a/sctnet/res/values/strings.xml
+++ b/sctnet/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
 
-    <string name="app_name">sctnet</string>
+    <string name="app_name">四川人才网</string>
     <string name="hello_world">四川人才网app!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">sctnet</string>
+    <string name="title_activity_main">四川人才网</string>
      
     <!--title -->
     <string name="titlebar_img_btn_left_desc">标题栏左边按钮</string>
