--- a/sctnet/res/values/strings.xml
+++ b/sctnet/res/values/strings.xml
@@ -36,4 +36,15 @@
     <string name="resumeNote1">(完成一下项即可申请职位)</string>
     <string name="resumeOptional">选填项</string>
     <string name="resumeNote2">(补充一下内容，更全面的展示自己)</string>
+<!--     登陆 -->
+<string name="loginActivityTitle">登录</string>
+  <string name="username_hint">请输入账号</string>
+    <string name="password_hint">请输入密码</string>
+    <string name="username_label">账号：</string>
+    <string name="password_label">密码：</string>
+    <string name="remember_password">记住密码</string>
+    <string name="auto_login">自动登录</string>
+    <string name="login_logo_description">掌上调度logo</string>
+    <string name="login">登 录</string>
+    <string name="copyright">Copyright © 2012 Cattsoft.All Rights Reserved</string>
 </resources>
