--- a/sctnet/res/values/strings.xml
+++ b/sctnet/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="userName">用户名：</string>
     <string name="postAppRecord">职位申请记录</string>
     <string name="postCollRecord">职位收藏记录</string>
+    <string name="companyProfile">公司简介</string>
+    <string name="readMyResume">谁看过我的简历</string>
 <!-- 简历管理 -->
     <string name="updateDate">更新于</string>
     <string name="finishStatus">完成度</string>
