--- a/sctnet/res/values/strings.xml
+++ b/sctnet/res/values/strings.xml
@@ -4,19 +4,19 @@
     <string name="hello_world">四川人才网app!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">四川人才网</string>
-     
-    <!--title -->
+
+    <!-- title -->
     <string name="titlebar_img_btn_left_desc">标题栏左边按钮</string>
     <string name="titlebar_img_btn_right_desc">标题栏右边按钮</string>
-    <!--     deloge -->
+    <!-- deloge -->
     <string name="loading">加载中...</string>
-<!--     主页 -->
+    <!-- 主页 -->
     <string name="homeActivityTitle">四川人才网</string>
     <string name="homeactivityhint">请输入关键字</string>
-    <string name="jobsearchTitle">职位搜索</string> 
-  <string name="jobsearchResult">搜索结果</string> 
-    
-<!-- 个人中心 -->
+    <string name="jobsearchTitle">职位搜索</string>
+    <string name="jobsearchResult">搜索结果</string>
+
+    <!-- 个人中心 -->
     <string name="personalActivityTitle">个人中心</string>
     <string name="userName">用户名：</string>
     <string name="postAppRecord">职位申请记录</string>
@@ -29,7 +29,7 @@
     <string name="interviewNotice">面试通知</string>
     <string name="myAppliedJob">我申请的职位</string>
     <string name="myCollectedJob">我收藏的职位</string>
-<!-- 简历管理 -->
+    <!-- 简历管理 -->
     <string name="updateDate">更新于</string>
     <string name="finishStatus">完成度</string>
     <string name="editResume">编辑简历</string>
@@ -62,12 +62,12 @@
     <string name="reccontent_hint">请输入推荐的内容（不超过200个字）</string>
     <string name="specialtyContent_hint">请输入您的特长（不超过200个字）</string>
     <string name="work_performance_hint">请输入您的工作经验（不超过5000个字）</string>
-    
-<!-- 办事指南 -->
+
+    <!-- 办事指南 -->
     <string name="workDirectionActivityTitle">办事指南</string>
-<!--     登陆 -->
-<string name="loginActivityTitle">登录</string>
-  <string name="username_hint">请输入账号</string>
+    <!-- 登陆 -->
+    <string name="loginActivityTitle">登录</string>
+    <string name="username_hint">请输入账号</string>
     <string name="password_hint">请输入密码</string>
     <string name="username_label">账号：</string>
     <string name="password_label">密码：</string>
@@ -77,25 +77,25 @@
     <string name="login">登 录</string>
     <string name="registerNow"><u>立即注册</u></string>
     <string name="copyright">Copyright © 2014 HelloWorld.All Rights Reserved</string>
-    
-	<!-- 薪酬调查 -->
+
+    <!-- 薪酬调查 -->
     <string name="salarySurvey">薪酬调查</string>
     <string name="selectForeignLanguage">外语能力</string>
-    <string name="jobExperience">职场经历</string>   
-    <!-- 更多 --> 
+    <string name="jobExperience">职场经历</string>
+    <!-- 更多 -->
     <string name="moreActivityTitle">更多</string>
     <string name="feedback">用户反馈</string>
     <string name="feedbackTitle">欢迎您提出宝贵的意见和建议，您留下的每个字都将用来改善我们的软件。</string>
     <string name="feedbackHint">请输入您的反馈意见（500字以内）</string>
     <string name="emailHint">您的邮箱（选填）</string>
     <string name="about">四川省人才交流中心\n网站手机版软件系统</string>
-    
+
     <!-- 信息咨询 -->
     <string name="information_query">信息咨询</string>
     <string name="search_hint">输入关键字搜索</string>
     <string name="interview">面试</string>
     <string name="change_job">跳槽</string>
-    
+
     <!-- 注册 -->
     <string name="registerTitle">注册</string>
     <string name="register_username_label">用  户  名 </string>
@@ -108,7 +108,7 @@
     <string name="register_email_hint">您常用的Email</string>
     <string name="register_hint">必填项</string>
     <string name="register_hint2">选填项</string>
-    
+
     <!-- 修改密码 -->
     <string name="change_password">修改密码</string>
     <string name="current_password_hint">当前密码</string>
@@ -116,12 +116,15 @@
     <string name="new_password_hint">新密码</string>
     <string name="new_password_hint2">6~16位数字字母</string>
     <string name="submit">提交</string>
-    
+
     <!-- 职位搜素 -->
     <string name="select_industry">选择行业</string>
     <string name="select_job">选择职能</string>
     <string name="apply">申请</string>
     <string name="collect">收藏</string>
     <string name="share">分享</string>
-    
+
+    <!-- 现场招聘会 -->
+    <string name="recentRecruiment">近期招聘</string>
+
 </resources>
