--- a/sctnet/res/values/strings.xml
+++ b/sctnet/res/values/strings.xml
@@ -130,5 +130,6 @@
     <!-- 现场招聘会 -->
     <string name="recentRecruiment">近期招聘</string>
     <string name="load_tips">正在地址加载...</string>
+    <string name="RecruitmentActivityTitle">现场招聘会</string>
 
 </resources>
