--- a/sctnet/res/values/strings.xml
+++ b/sctnet/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="ProvincesActivityTitle">编辑个人简介</string>
     <string name="JobIntentionEditActivityTitle">编辑求职意向</string>
     <string name="ContactWayEditActivityTitle">编辑联系方式</string>
-    <string name="EducationExperienceEditActivityTitle">编辑联系方式</string>
+    <string name="EducationExperienceEditActivityTitle">编辑教育情况</string>
     <string name="WorkExperienceEditActivityTitle">编辑职业生涯</string>
     <string name="WorkPerformanceEditActivityTitle">编辑工作经验</string>
     <string name="ResumeCreateActivityTitle">创建简历</string>
