--- a/sctnet/res/values/strings.xml
+++ b/sctnet/res/values/strings.xml
@@ -135,5 +135,9 @@
     
     <!-- 档案查询 -->
     <string name="ArchivesQueryActivityTitle">档案查询</string>
+    
+    <string name="downloading">正在下载...</string>
+    <string name="cancel">取消</string>
+    
 
 </resources>
