--- a/sctnet/res/values/strings.xml
+++ b/sctnet/res/values/strings.xml
@@ -142,6 +142,15 @@
     <string name="downloading">正在下载...</string>
     <string name="cancel">取消</string>
     
+    <!-- 更新版本 -->
+    <string name="soft_update_no">已经是最新版本</string>
+    <string name="soft_update_title">软件更新</string>
+    <string name="soft_update_updatebtn">更新</string>
+    <string name="soft_update_later">稍后更新</string>
+    <string name="soft_updating">正在更新</string>
+    <string name="soft_update_cancel">取消</string>
+    
+    
     <!-- 分享用到的字符串 -->
     <string name="finish">完成</string>
     <string name="sharing">分享操作正在后台进行…</string>
