--- a/sctnet/res/values/strings.xml
+++ b/sctnet/res/values/strings.xml
@@ -87,7 +87,7 @@
     <string name="jobExperience">职场经历</string>
     <string name="salarySurvey_username">你参与调查的ID号</string>
     <string name="salarySurvey_password">你参与调查的密码</string>
-    
+
     <!-- 更多 -->
     <string name="moreActivityTitle">更多</string>
     <string name="feedback">用户反馈</string>
@@ -135,13 +135,12 @@
     <string name="load_tips">正在地址加载...</string>
     <string name="RecruitmentActivityTitle">现场招聘会</string>
     <string name="RecruitmentCompanyListActivityTitle">公司列表</string>
-    
+
     <!-- 档案查询 -->
     <string name="ArchivesQueryActivityTitle">档案查询</string>
-    
     <string name="downloading">正在下载...</string>
     <string name="cancel">取消</string>
-    
+
     <!-- 更新版本 -->
     <string name="soft_update_no">已经是最新版本</string>
     <string name="soft_update_title">软件更新</string>
@@ -149,38 +148,44 @@
     <string name="soft_update_later">稍后更新</string>
     <string name="soft_updating">正在更新</string>
     <string name="soft_update_cancel">取消</string>
-    
+
     <!-- 消息订阅 -->
     <string name="subscribe_name">订阅名称</string>
-	<string name="subscribe_name_hint">点击输入</string>
-	<string name="key_words">关键词</string>
-	<string name="key_words_hint">如:职位名称、公司名称、工作地点等</string>
-	<string name="subscribeActivityTitle">订阅</string>
-	    
+    <string name="subscribe_name_hint">点击输入</string>
+    <string name="key_words">关键词</string>
+    <string name="key_words_hint">如:职位名称、公司名称、工作地点等</string>
+    <string name="subscribeActivityTitle">订阅</string>
+
     <!-- 分享用到的字符串 -->
     <string name="finish">完成</string>
     <string name="sharing">分享操作正在后台进行…</string>
     <string name="share_to">分享到</string>
-	<string name="multi_share">图文分享</string>
-	<string name="share_completed">分享成功</string>
-	<string name="share_canceled">分享已取消</string>
-	<string name="select_one_plat_at_least">请选择一个目标平台</string>
-	<string name="list_friends">%s的朋友</string>
-	<string name="share_failed">分享失败</string>
-	<string name="pull_to_refresh">下拉刷新</string>
-	<string name="release_to_refresh">松开刷新</string>
-	<string name="refreshing">刷新中…</string>
-    
+    <string name="multi_share">图文分享</string>
+    <string name="share_completed">分享成功</string>
+    <string name="share_canceled">分享已取消</string>
+    <string name="select_one_plat_at_least">请选择一个目标平台</string>
+    <string name="list_friends">%s的朋友</string>
+    <string name="share_failed">分享失败</string>
+    <string name="pull_to_refresh">下拉刷新</string>
+    <string name="release_to_refresh">松开刷新</string>
+    <string name="refreshing">刷新中…</string>
     <string name="weibo_oauth_regiseter">应用授权</string>
     <string name="website">http://www.shareSDK.cn</string>
     <string name="weibo_upload_content">分享图片</string>
     <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
     <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
-    
-	<string name="sinaweibo">新浪微博</string>
-	<string name="tencentweibo">腾讯微博</string>
-	<string name="qzone">QQ空间</string>
-	<string name="wechat">微信好友</string>
-	<string name="wechatmoments">微信朋友圈</string>
+    <string name="sinaweibo">新浪微博</string>
+    <string name="tencentweibo">腾讯微博</string>
+    <string name="qzone">QQ空间</string>
+    <string name="wechat">微信好友</string>
+    <string name="wechatmoments">微信朋友圈</string>
+    <!-- <string name="RecruitmentCompanyListActivityTitle">参会单位列表</string> -->
+    <string name="archivers_explain">查询结果仅为简要信息，数据并非实时更新，如需及时查询是否到档请致电028-86130505</string>
+    <!-- 忘记密码 -->
+    <string name="forgetPassword"><u>忘记密码</u></string>
+    <string name="forgetPasswordTitle">找回密码</string>
+    <string name="forget_password_user_name_hint">请输入您的用户名</string>
+    <string name="forget_password_email_hint">请输入注册时使用的邮箱</string>
+    <string name="forget_password_ok">确定</string>
 
 </resources>
