--- a/sctnet/res/values/strings.xml
+++ b/sctnet/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
 
-    <string name="app_name">四川人才网</string>
-    <string name="hello_world">四川人才网app!</string>
+    <string name="app_name">四川省人才网</string>
+    <string name="hello_world">四川省人才网app!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">四川人才网</string>
+    <string name="title_activity_main">四川省人才网</string>
 
     <!-- title -->
     <string name="titlebar_img_btn_left_desc">标题栏左边按钮</string>
@@ -11,7 +11,7 @@
     <!-- deloge -->
     <string name="loading">加载中...</string>
     <!-- 主页 -->
-    <string name="homeActivityTitle">四川人才网</string>
+    <string name="homeActivityTitle">四川省人才网</string>
     <string name="homeactivityhint">请输入关键字</string>
     <string name="jobsearchTitle">职位搜索</string>
     <string name="jobsearchResult">搜索结果</string>
